Added env files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=monnify
+youverify_base_url=${YOUVERIFY_SANDBOX_BASE_URL}
+youverify_api_key=${YOUVERIFY_SANDBOX_API_KEY}
+youverify_test_data=${YOUVERIFY_BVN_TEST_DATA}
+youverify_test_data2=${YOUVERIFY_BVN_TEST_DATA2}
+#monniefy
