Added config files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,17 @@
 spring.application.name=monnify
-youverify_base_url=${YOUVERIFY_SANDBOX_BASE_URL}
-youverify_api_key=${YOUVERIFY_SANDBOX_API_KEY}
-youverify_test_data=${YOUVERIFY_BVN_TEST_DATA}
-youverify_test_data2=${YOUVERIFY_BVN_TEST_DATA2}
+youverify_base_url=${youverify.sandbox.base.url}
+youverify_api_key=${youverify.sandbox.api.key}
+youverify_test_data=${youverify.bvn.test.data}
+youverify_test_data2=${youverify.bvn.test.data2}
 #monniefy
+monnify-api-secret=${monnify.api.secret}
+monnify-base-url=${monnify.base.url}
+monnify-api-key=${monnify.api.key}
+monnify-create-account=${monnify.create.reserved.account}
+monnify-api-token=${monnify.login.url}
+monnify-get-reserved-url=${monnify.get.reserved.account}
+monnify-contract-code=${monnify.contract.code}
+
+account-ref-prefix=${account.prefix}
+
+spring.config.import=secret.properties
