Configured Redis connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,18 @@ monnify-api-key=${monnify.api.key}
 monnify-create-account=${monnify.create.reserved.account}
 monnify-api-token=${monnify.login.url}
 monnify-get-reserved-url=${monnify.get.reserved.account}
+monnify-get-reserved-account_transaction_url=${monnify.get.reserved.account.balance}
 monnify-contract-code=${monnify.contract.code}
+
 
 account-ref-prefix=${account.prefix}
 
 spring.config.import=secret.properties
+spring.cache.type=redis
+spring.cache.redis.time-to-live=60000
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+logging.level.org.springframework.cache=DEBUG
+logging.level.org.springframework.cache.interceptor=DEBUG
 
 server.port=8080
